Fill form width overflow possible fix pt.1

--- a/app/completare-cv/style.css
+++ b/app/completare-cv/style.css
@@ -5,7 +5,12 @@
     color: var(--black);
     background-color: var(--primary);
     text-align: center;
-    font-size: 50px;
+  }
+
+  @media screen and (min-width: 370px) {
+    > h1 {
+      font-size: 50px;
+    }
   }
 
   @media screen and (min-width: 700px) {
